--- a/Text-Summarizer/config/config.yaml
+++ b/Text-Summarizer/config/config.yaml
@@ -3,6 +3,12 @@ artifacts_root: artifacts
 
 data_ingestion:
   root_dir: artifacts/data_ingestion
-  source_URL: https://github.com/ramnaresh-ahi/Text-Summarizer/raw/refs/heads/main/summarizer-data.zip
+  source_URL: https://github.com/ramnaresh-ahi/Text-Summarizer/raw/refs/heads/main/Text-Summarizer/summarizer-data.zip
   local_data_file: artifacts/data_ingestion/data.zip
   unzip_dir: artifacts/data_ingestion
+
+
+data_validation:
+  root_dir: artifacts/data_validation
+  STATUS_FILE: artifacts/data_validation/status.txt
+  ALL_REQUIRED_FILES: ["train", "test", "validation"]
